--- a/src/AdministrationBundle/Resources/views/maintenance/maintenance_info.html.twig
+++ b/src/AdministrationBundle/Resources/views/maintenance/maintenance_info.html.twig
@@ -2,14 +2,14 @@
 
     {# Maintenance information #}
     <h5 ng-cloak>
-        <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }}
+        <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }} {{ ng.translate('MAINTENANCE.FOR') }} {{ store.Name }}
     </h5>
     <div class="well">
         {% verbatim %}
         <div class="form-group">
             <div class="row">
                 <div class="col-md-2 col-xs-4" ng-cloak><label>{{ 'COLLECTIONS.DATE' | translate }}:</label></div>
-                <div class="col-md-10 col-xs-8" ng-cloak>{{ collections.collection().Date.date | GMT:'DD-MM-YYYY HH:mm:ss' }}</div>
+                <div class="col-md-10 col-xs-8" ng-cloak>{{ collections.collection().Date.date | GMT:'DD-MM-YYYY HH:mm' }}</div>
             </div>
         </div>
         <div class="form-group">
