Added store inventory functionality.

--- a/src/AdministrationBundle/Resources/views/header/header.html.twig
+++ b/src/AdministrationBundle/Resources/views/header/header.html.twig
@@ -26,6 +26,7 @@
                             <li><a href="{{ path('administration_companies') }}" ng-cloak> {{ ng.translate('COMPANY.COMPANIES') }} </a></li>
                             <li><a href="{{ path('administration_stores') }}" ng-cloak> {{ ng.translate('STORE.STORES') }} </a></li>
                             <li><a href="{{ path('administration_regions') }}" ng-cloak> {{ ng.translate('COMPANY.REGIONS') }} </a></li>
+                            <li><a href="{{ path('administration_inventory') }}" ng-cloak> {{ ng.translate('INVENTORY.LABEL') }} </a></li>
                         </ul>
                     </li>
 
@@ -46,7 +47,7 @@
                             <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('MAINTENANCE.LABEL') }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('administration_maintenance_stores') }}" ng-cloak> {{ ng.translate('MAINTENANCE.PERIODICALY') }} </a></li>
+                            <li><a href="{{ path('administration_maintenance') }}" ng-cloak> {{ ng.translate('MAINTENANCE.PERIODICALY') }} </a></li>
                         </ul>
                     </li>
 
