--- a/src/AdministrationBundle/Resources/views/inventory/inventory_info.html.twig
+++ b/src/AdministrationBundle/Resources/views/inventory/inventory_info.html.twig
@@ -1,15 +1,15 @@
 <div class="container">
 
-    {# Maintenance information #}
+    {# Inventory information #}
     <h5 ng-cloak>
-        <i class="fa fa-fw fa-list"></i> {{ ng.translate('MAINTENANCE.LABEL') }} {{ ng.translate('MAINTENANCE.FOR') }} {{ store.Name }}
+        <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('INVENTORY.LABEL') }} {{ ng.translate('INVENTORY.OF') }} {{ store.Name }}
     </h5>
     <div class="well">
         {% verbatim %}
         <div class="form-group">
             <div class="row">
                 <div class="col-md-2 col-xs-4" ng-cloak><label>{{ 'COLLECTIONS.DATE' | translate }}:</label></div>
-                <div class="col-md-10 col-xs-8" ng-cloak>{{ collections.collection().Date.date | GMT:'DD-MM-YYYY HH:mm' }}</div>
+                <div class="col-md-10 col-xs-8" ng-cloak>{{ collections.collection().CreatedAt.date | GMT:'DD-MM-YYYY HH:mm' }}</div>
             </div>
         </div>
         <div class="form-group">
@@ -69,7 +69,7 @@
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-12">
-                <button class="btn btn-sm btn-default pull-left" ng-click="showCollections('administration_maintenance')" ng-cloak>
+                <button class="btn btn-sm btn-default pull-left" ng-click="showCollections('administration_inventory')" ng-cloak>
                     <i class="fa fa-close"></i> {{ ng.translate('CANCEL') }}
                 </button>
             </div>
