--- a/src/AppBundle/Resources/views/store/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/store/dashboard.html.twig
@@ -42,7 +42,7 @@
                             <i class="fa fa-list fa-5x fa-fw"></i>
                         </div>
                         <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('COLLECTION_TYPE.INVENTORY.NAME') }}
+                            {{ ng.translate('INVENTORY.LABEL') }}
                         </div>
                     </div>
                 </div>
