--- a/src/AppBundle/Resources/views/store/maintenance_info.html.twig
+++ b/src/AppBundle/Resources/views/store/maintenance_info.html.twig
@@ -2,7 +2,7 @@
 
     {# Maintenance information #}
     <h5 ng-cloak>
-        <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }}
+        <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }} {{ ng.translate('MAINTENANCE.FOR') }} {{ store.Name }}
     </h5>
     <div class="well">
         {% verbatim %}
