--- a/src/AdministrationBundle/Resources/views/inventory/inventory.html.twig
+++ b/src/AdministrationBundle/Resources/views/inventory/inventory.html.twig
@@ -19,26 +19,22 @@
                             <table class="table table-striped table-bordered">
                                 <thead>
                                 <tr>
-                                    <th st-sort="CreatedBy.Name" class="st-sortable col-md-2 col-xs-2"
-                                        ng-cloak>{{ ng.translate('COLLECTIONS.NAME') }}</th>
-                                    <th st-sort="Name" class="st-sortable col-md-4 col-xs-4"
+                                    <th st-sort="Name" class="st-sortable col-md-7 col-xs-5"
                                         ng-cloak>{{ ng.translate('COLLECTIONS.DESCRIPTION') }}</th>
-                                    <th st-sort="Date.date" class="st-sortable col-md-2 col-xs-2"
-                                        ng-cloak>{{ ng.translate('COLLECTIONS.DATE') }}</th>
+                                    <th st-sort="Attachments" class="st-sortable col-md-1 col-xs-2 text-center"
+                                        ng-cloak><i class="fa fa-fw fa-paperclip"></i></th>
                                     <th st-sort="IsPublished" class="st-sortable text-right col-md-2 col-xs-2"
                                         ng-cloak>{{ ng.translate('COLLECTIONS.PUBLISHED') }}</th>
-                                    <th class="st-nosort text-right col-md-2 col-xs-2"
+                                    <th class="st-nosort text-right col-md-2 col-xs-3"
                                         ng-cloak>{{ ng.translate('ACTION') }}</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 {% verbatim %}
                                 <tr ng-repeat="row in collectionsCollection">
-                                    <td ng-cloak>{{ row.CreatedBy.Name }}</td>
                                     <td ng-cloak>{{ row.Name }}</td>
-                                    <td ng-cloak>{{ row.CreatedAt.date | GMT:'DD-MM-YYYY HH:mm' }}</td>
+                                    <td class="text-center"><i class="fa fa-fw fa-paperclip" ng-if="row.Attachments"></i></td>
                                     <td ng-cloak class="text-right">
-                                        <i ng-show="row.Attachments" class="fa fa-fw fa-paperclip"></i>
                                         <label class="label label-success tag-label" ng-show="{{ row.IsPublished }}">{{ 'YES' | translate }}</label>
                                         <label class="label label-danger tag-label" ng-hide="{{ row.IsPublished }}">{{ 'NO' | translate }}</label>
                                     </td>
