--- a/src/AdministrationBundle/Resources/views/attachment/attachment_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/attachment/attachment_form.html.twig
@@ -9,10 +9,10 @@
         <div class="form-group">
             <div class="row">
                 <div class="col-md-12 col-sx-12">
-                    <div ng-if="collections.attachment().Type == 1">
+                    <div ng-if="collections.attachment().Type == 1" class="text-center">
                         <img ng-src="{{ attachmentUrl(collections.attachment().Id) }}" width="75%"/>
                     </div>
-                    <div ng-if="collections.attachment().Type == 2">
+                    <div ng-if="collections.attachment().Type == 2" class="text-center">
                         <i class="fa fa-fw fa-file-pdf-o fa-5x text-center"></i>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-12">
-                <button class="btn btn-sm btn-default pull-left" ng-click="showCollections('administration_inventory')" ng-cloak>
+                <button class="btn btn-sm btn-default pull-left" ng-click="showPreviousPage()" ng-cloak>
                     <i class="fa fa-close"></i> {{ ng.translate('CANCEL') }}
                 </button>
                 <button class="btn btn-sm btn-success pull-right" ng-click="saveAttachmentData()"
