--- a/src/AppBundle/Resources/views/store/inventory_info.html.twig
+++ b/src/AppBundle/Resources/views/store/inventory_info.html.twig
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                         <div class="panel-footer">
-                            <div class="text-center text-muted">{{ attachment.OriginalName }}</div>
+                            <div class="text-center text-muted">{{ attachment.Name }}</div>
                         </div>
                     </div>
                 </div>
