Packet log refresh data only.

--- a/src/AdministrationBundle/Resources/views/packetlog/log.html.twig
+++ b/src/AdministrationBundle/Resources/views/packetlog/log.html.twig
@@ -76,7 +76,7 @@
                                 <div class="panel-footer">
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <button ng-click="reloadPage()" class="btn btn-sm btn-primary pull-left" ng-cloak>
+                                            <button ng-click="getPacketlog()" class="btn btn-sm btn-primary pull-left" ng-cloak>
                                                 <i class="fa fa-refresh"></i> {{ ng.translate('REFRESH') }}
                                             </button>
                                         </div>
